ipc/ipdl/test/ipdl/ok/manageSelf.ipdl
include protocol manageSelf_Toplevel;

protocol manageSelf {
    manager manageSelf_Toplevel or manageSelf;
    manages manageSelf;

child:
    async manageSelf();
    async __delete__();
};
